# asktube-experiment

./: .gitignore  README.md  observations.md
asktube-codex-sandbox/: README.md  pyproject.toml
asktube-codex-sandbox/src/: cli.py  formatter.py  youtube.py
asktube-codex-sandbox/tests/: test_summarizer.py  test_youtube.py
chatgpt-attempt/: README.md  pyproject.toml
chatgpt-attempt/src/: cli.py  formatter.py  summarizer.py  youtube.py
chatgpt-attempt/tests/: test_cli.py  test_formatter.py  test_summarizer.py  test_youtube.py
codex-attempt/: README.md
codex-attempt/src/: summarizer.py
codex-attempt/tests/: test_cli.py  test_formatter.py
