[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asktube"
version = "0.1.0"
description = "Summarize YouTube transcripts to timestamped Markdown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "youtube-transcript-api>=1.2.0",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
asktube = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "youtube", "summarizer", "formatter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
